resoluçao do exercicio 1001 - extremamente básic

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Exercícios de Função</title>
 </head>
 <body>
@@ -13,7 +14,8 @@
     <nav>
         <ul>
             <li>
-                <a href="">Extremamente Básico/a>
+                <a href="">Extremamente Básico/<a>
+                    <a href="./pages/extremamente_basico/extremamente_basico.html">Extremamente Básico</a>
             </li>
             <li>
                 <a href="">Média</a>
