--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </li>
             <li>
                 <a href="">Média</a>
+                <a href="./pages/media1/media1.html">Média</a>
             </li>
             <li>
                 <a href="">Salário com Bônus</a>
