resolução do exercício 1017- esfera

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
                 <a href="">Salário com Bônus</a>
                 <a href="./pages/salario_bonus/salario_bonus.html">Salário com Bônus</a>
             </li>
+            <li>
+                <a href="./pages/esfera/esfera.html">Esfera</a>
+            </li>
+            <li>
+                <a href="./pages/consumo/consumo.html">Consumo</a>
+            </li>
+            <li>
+                <a href="./pages/gasto_combustivel/gasto_combustivel.html">Gasto de Combustível</a>
+            </li>
         </ul>
     </nav>
 </body>
