resolução do exercício 1014- consumo

--- a/pages/consumo/consumo.html
+++ b/pages/consumo/consumo.html
@@ -6,6 +6,6 @@
     <title>Esfera</title>
 </head>
 <body>
-    <script src="./esfera.js"></script>
+    <script src="./consumo.js"></script>
 </body>
 </html>
