--- a/pages/gasto/gasto_combustivel.html
+++ b/pages/gasto/gasto_combustivel.html
@@ -6,6 +6,6 @@
     <title>Esfera</title>
 </head>
 <body>
-    <script src="./esfera.js"></script>
+    <script src="./gasto_combustivel.js"></script>
 </body>
 </html>
